--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -1,42 +1,39 @@
-@ARTICLE{Gupta2020-vo,
-   title         = "Visualizing probability distributions across bivariate
-                    cyclic temporal granularities",
-   author        = "Gupta, Sayani and Hyndman, Rob J and Cook, Dianne and Unwin,
-                    Antony",
-   abstract      = "Deconstructing a time index into time granularities can
-                    assist in exploration and automated analysis of large
-                    temporal data sets. This paper describes classes of time
-                    deconstructions using linear and cyclic time granularities.
-                    Linear granularities respect the linear progression of time
-                    such as hours, days, weeks and months. Cyclic granularities
-                    can be circular such as hour-of-the-day, quasi-circular such
-                    as day-of-the-month, and aperiodic such as public holidays.
-                    The hierarchical structure of granularities creates a nested
-                    ordering: hour-of-the-day and second-of-the-minute are
-                    single-order-up. Hour-of-the-week is multiple-order-up,
-                    because it passes over day-of-the-week. Methods are provided
-                    for creating all possible granularities for a time index. A
-                    recommendation algorithm provides an indication whether a
-                    pair of granularities can be meaningfully examined together
-                    (a ``harmony''), or when they cannot (a ``clash''). Time
-                    granularities can be used to create data visualizations to
-                    explore for periodicities, associations and anomalies. The
-                    granularities form categorical variables (ordered or
-                    unordered) which induce groupings of the observations.
-                    Assuming a numeric response variable, the resulting graphics
-                    are then displays of distributions compared across
-                    combinations of categorical variables. The methods
-                    implemented in the open source R package `gravitas` are
-                    consistent with a tidy workflow, with probability
-                    distributions examined using the range of graphics available
-                    in `ggplot2`.",
-   month         =  oct,
-   year          =  2020,
-   archivePrefix = "arXiv",
-   primaryClass  = "stat.AP",
-   eprint        = "2010.00794"
+ @ARTICLE{Gupta2021-hd,
+   title     = "Visualizing probability distributions across bivariate cyclic
+                temporal granularities",
+   author    = "Gupta, Sayani and Hyndman, Rob J and Cook, Dianne and Unwin,
+                Antony",
+   abstract  = "AbstractDeconstructing a time index into time granularities can
+                assist in exploration and automated analysis of large temporal
+                data sets. This paper describes classes of time deconstructions
+                using linear and cyclic time granularities. Linear granularities
+                respect the linear progression of time such as hours, days,
+                weeks and months. Cyclic granularities can be circular such as
+                hour-of-the-day, quasi-circular such as day-of-the-month, and
+                aperiodic such as public holidays. The hierarchical structure of
+                granularities creates a nested ordering: hour-of-the-day and
+                second-of-the-minute are single-order-up. Hour-of-the-week is
+                multiple-order-up, because it passes over day-of-the-week.
+                Methods are provided for creating all possible granularities for
+                a time index. A recommendation algorithm provides an indication
+                whether a pair of granularities can be meaningfully examined
+                together (a ?harmony?), or when they cannot (a ?clash?). Time
+                granularities can be used to create data visualizations to
+                explore for periodicities, associations and anomalies. The
+                granularities form categorical variables (ordered or unordered)
+                which induce groupings of the observations. Assuming a numeric
+                response variable, the resulting graphics are then displays of
+                distributions compared across combinations of categorical
+                variables.The methods implemented in the open source R package
+                gravitas are consistent with a tidy workflow, with probability
+                distributions examined using the range of graphics available in
+                ggplot2.",
+   journal   = "J. Comput. Graph. Stat.",
+   publisher = "Taylor \& Francis",
+   pages     = "1--26",
+   month     =  jun,
+   year      =  2021
  }
-
 
 @Book{Wickham2009pk,
    author = {Hadley Wickham},
