--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -25,7 +25,7 @@ keywords:
 - R
 
 abstract: |
- Repetitive and dependency patterns in large univariate time series data can be measured by cyclic temporal granularities, which are temporal deconstructions such as hour-of-the-day, work-day/weekend, or holidays. This provides a new way to do exploratory analysis of time series data. However, especially when there are numerous granularities, it can present too many possible displays to process by a person. A new distance metric is proposed that provides a tool to screen and rank the possible displays. The distance measure is computed for a single or pairs of cyclic granularities can can be compared across different cyclic granularities and also on a collection of time series. These methods are implemented in the open-source R package `hakear`. 
+ Cyclic temporal granularities, which are temporal deconstructions of a time period into units such as hour-of-the-day, work-day/weekend, can be useful for measuring repetitive patterns in large univariate time series data. The granularities feed new approaches to exploring time series data. One use is to take pairs of granularities, and make plots of response values across the categories induced by the temporal deconstruction. However, when there are many granularities that can be constructed for a time period, there will also be too many possible displays to decide which might be the more interesting to display. This work proposes a new distance metric to screen and rank the possible granularities, and hence choose the most interesting ones to plot. The distance measure is computed for a single or pairs of cyclic granularities can can be compared across different cyclic granularities and also on a collection of time series. The methods are implemented in the open-source R package `hakear`. 
 
 bibliography: [bibliography.bib]
 preamble: >
