first two paragraphs and figure 1

--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -40,6 +40,7 @@ preamble: >
   \captionsetup[table]{style=italic,format=hang,singlelinecheck=true}
   \def\novspacing{\setlength{\aboverulesep}{0pt}\setlength{\belowrulesep}{0pt}}
   \def\vspacing{\setlength{\aboverulesep}{0.4ex}\setlength{\belowrulesep}{0.65ex}}
+  \newcommand{\DC}[1]{\textcolor{red}{#1}}
 output:
   bookdown::pdf_book:
     base_format: rticles::asa_article
@@ -94,16 +95,16 @@ set.seed(3215)
 
 <!--Exploratory data analysis, as coined by John W. Tukey [@Tukey1977-jx] involves many iterations of finding structures and patterns that allow the data to be informative.-->
 
-Cyclic temporal granularities [@Bettini1998-ed, @Gupta2021-hd] are theoretical temporal deconstructions that define cyclic repetitions in time, e.g. hour-of-day, day-of-month, or regularly scheduled public holidays. These granularities form ordered or unordered categorical variables. An example of an ordered granularity is day-of-week, where Tuesday is always followed by Wednesday, and so on. An unordered granularity might be XXX. Thus we can consider that exploring univariate time series using granularities to be examining the distribution of the measured variable across different categories of the cyclic granularities.
+Cyclic temporal granularities [@Bettini1998-ed, @Gupta2021-hd] are <!--theoretical--> temporal deconstructions that define cyclic repetitions in time, e.g. hour-of-day, day-of-month, or regularly scheduled public holidays. These granularities form ordered or unordered categorical variables. An example of an ordered granularity is day-of-week, where Tuesday is always followed by Wednesday, and so on. An unordered granularity example is \DC{different week types in a semester, orientation, break, exam or regular classes in an academic calendar}. Using granularities to  explore patterns in univariate time series can be considered to be examining the distribution of the measured variable across different categories of the cyclic granularities.
 
-As an example, Figure \ref{fig:onegran-new} shows electricity smart meter data for four households in Melbourne, Australia [@wang2020calendar]. The distribution of energy usage of one household (id 2) across cyclic granularity a) hour-of-day and b) month-of-year. Figure \ref{fig:onegran-new}(a) shows that energy consumption is higher during the morning hours (5-8) when members in the household wake up and then again in the evening hours (17-20) possibly when members get back from work with maximum variation (large interquartile range) in behavior in the afternoon hours (12-16). Figure \ref{fig:onegran-new}(b) shows the distribution of energy consumption across months January to June. The median and quartile deviation of energy usage in Jan and Feb are generally on a much higher side, possibly due to the usage of air conditioners (Jan, Feb are peak summer in Australia), however, for other months (Mar-Jun, autumn and winter), the smaller median and quartile deviation indicate a more consistent behavior. It might also imply that this household does not use as much heater as compared to air conditioner. A lot of households in Victoria use gas heating and hence the usage of heaters might not be reflected here. Potentially many such displays could be drawn across day-of-week, day-of-month, weekday/weekend, or any other chosen cyclic granularities of interest. However, all of them would not be interesting to discern important patterns in energy usage. Only those displays, which have "significant" distributional differences between categories of the cyclic granularity would be informative.
+Figure \ref{fig:onegran-new} electricity smart meter data plotted against two granularities (hour-of-day, month-of-year). The data was collected on a single household in Melbourne, Australia, over a six month period, as was used in @wang2020calendar. The categorical variable (granularity) is mapped to the x-axis, and the distribution of response variable is displayed using both side-by-side jittered dotplots and boxplots.  From plot (a) it can be seen that energy consumption is higher during the morning hours (5-8), when members in the household wake up, and again in the evening hours (17-20) possibly when members get back from work. In addition, the largest variation in energy use is in the afternoon hours (12-16), as perceived from sizes of the boxes. From plot (b) the variability in energy usage is higher in Jan and Feb, possibly due to the usage of air conditioners on some days. The median usage is highest in January, dips in February-April and rises again in May-June, although not to the height of January usage. This might imply that this household does not use as much energy for heating as it does for air conditioning. A lot of households in Victoria use gas heating and hence the heater use might not be reflected in the electricity data. Many, many different displays could be constructed using different granularities,  day-of-week, day-of-month, weekday/weekend, etc. However, only a few might be interesting, that is, reveal important patterns in energy usage. Determining which displays which have "significant" distributional differences between categories of the cyclic granularity, and plotting only these, would make for efficient exploration.
 
 ```{r calendar-elec, fig.height = 8, fig.cap = "Calendar displays faceted by two households are shown. The calendar displays are rich in information and has several components. For example, it can be observed easily that the level of energy consumption by household 2 is higher than household 4. Also, it gives an overview on when these households are away for holidays and which months consumptions are highest (Jan, Feb). However, when it comes to discerning periodic patterns, analyzing all possible periodic patterns through this display is overwhelming due to combination of linear and cyclic representation of time. For example, there is more going on in terms of peaks and troughs in id 2 compared to id 4, but it is not clear which all periodic patterns are dominant and if it differs between households."}
 
 ```
 
 
-```{r onegran-new, fig.cap="Boxplots showing the distribution of one household across one cyclic granularity at a time - (a) hour-of-day and (b) and month-of-year. The daily and annual periodic behavior of energy is apparent in (a) and (b) respectively, with daily peaks occurring in morning and evening hours when members in the house are present and active, more volatility (usage of air conditioner) in summer months (Jan, Feb) due to air conditioners and more consistent behavior in winter and autumn months (Mar, Apr, May, June)."}
+```{r onegran-new, fig.cap="A cyclic granularity can be considered to be a categorical variable, and used to break the data into subsets. Here, side-by-side boxplots overlaid on jittered dotplots explore the distribution of of energy use by a household for two different cyclic granularities: (a) hour-of-day and (b) and month-of-year. Daily peaks occur in morning and evening hours, indicating a working household, where members leave for and return from work.  More volatility of usage in summer months (Jan, Feb) is probably due air conditioner use on just some days ."}
 ```
 
 <!-- comparing one and two grans for one households -->
