Citations changed from "To appear" to "published"

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -55,12 +55,14 @@
 }
 
 @article{wang2020calendar,
-  title={Calendar-based graphics for visualizing people’s daily schedules},
-  author={Wang, Earo and Cook, Dianne and Hyndman, Rob J},
-  journal={Journal of Computational and Graphical Statistics},
-  note={to appear},
-  year={2020},
-  publisher={Taylor \& Francis},
+  author = {Earo Wang and Dianne Cook and Rob J Hyndman},
+  title = {Calendar-based graphics for visualizing people's daily schedules},
+  journal = {Journal of Computational and Graphical Statistics},
+  volume = {29},
+  number = {3},
+  pages = {490-502},
+  year  = {2020},
+  publisher = {Taylor \& Francis},
   doi = {10.1080/10618600.2020.1715226}
 }
 
@@ -138,12 +140,15 @@
    doi = {10.1023/A:1015835418881}
  }
  
-@article{wang2019tsibble,
-  Author = {Earo Wang and Dianne Cook and Rob J Hyndman},
-  Title = {A new tidy data structure to support exploration and modeling of temporal data},
+@article{wang2020tsibble,
+  author = {Earo Wang and Dianne Cook and Rob J Hyndman},
+  title = {A new tidy data structure to support exploration and modeling of temporal data},
   journal = {Journal of Computational and Graphical Statistics},
-  year = {2020},
-  note = {to appear},
+  volume = {29},
+  number = {3},
+  pages = {466-478},
+  year  = {2020},
+  publisher = {Taylor \& Francis},
   doi = {10.1080/10618600.2019.1695624}
 }
 
