Updated bib files

--- a/paper/bibliography.bib
+++ b/paper/bibliography.bib
@@ -28,11 +28,9 @@
                 gravitas are consistent with a tidy workflow, with probability
                 distributions examined using the range of graphics available in
                 ggplot2.",
-   journal   = "J. Comput. Graph. Stat.",
-   publisher = "Taylor \& Francis",
-   pages     = "1--26",
-   month     =  jun,
-   year      =  2021
+   journal   = "Journal of Computational \& Graphical Statistics",
+   year      =  2021,
+   note = {to appear}
  }
 
 @Book{Wickham2009pk,
@@ -57,7 +55,7 @@
 @article{wang2020calendar,
   author = {Earo Wang and Dianne Cook and Rob J Hyndman},
   title = {Calendar-based graphics for visualizing people's daily schedules},
-  journal = {Journal of Computational and Graphical Statistics},
+  journal = {Journal of Computational \& Graphical Statistics},
   volume = {29},
   number = {3},
   pages = {490-502},
@@ -143,7 +141,7 @@
 @article{wang2020tsibble,
   author = {Earo Wang and Dianne Cook and Rob J Hyndman},
   title = {A new tidy data structure to support exploration and modeling of temporal data},
-  journal = {Journal of Computational and Graphical Statistics},
+  journal = {Journal of Computational \& Graphical Statistics},
   volume = {29},
   number = {3},
   pages = {466-478},
@@ -703,7 +701,7 @@
 
 @Manual{Earo-Sugrrants,
   title = {sugrrants: Supporting Graphs for Analysing Time Series},
-  author = {Earo Wang and Di Cook and Rob Hyndman},
+  author = {Earo Wang and Di Cook and Rob J Hyndman},
   year = {2018},
   note = {R package version 0.1.5},
   url = {https://CRAN.R-project.org/package=sugrrants},
@@ -858,7 +856,7 @@
  
  
 @ARTICLE{ieee-irish,
-  author={R. J. {Hyndman} and X. {Liu} and P. {Pinson}},
+  author={Rob J {Hyndman} and X. {Liu} and P. {Pinson}},
   journal={IEEE Power and Energy Magazine}, 
   title={Visualizing Big Energy Data: Solutions for This Crucial Component of Data Analysis}, 
   year={2018},
@@ -880,7 +878,7 @@
 
 @Book{rmarkdown,
   title = {R Markdown: The Definitive Guide},
-  author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
+  author = {Yihui Xie and J. J. Allaire and Garrett Grolemund},
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2018},
@@ -893,7 +891,7 @@
 @Manual{R-gravitas,
     title = {{gravitas}: Explore Probability Distributions for Bivariate Temporal
 Granularities},
-    author = {Sayani Gupta and Rob Hyndman and Di Cook and Antony Unwin},
+    author = {Sayani Gupta and Rob J Hyndman and Di Cook and Antony Unwin},
     year = {2019},
     note = {R package version 0.1.0},
     url = {https://CRAN.R-project.org/package=gravitas},
@@ -932,7 +930,7 @@ Granularities},
 }
 @Manual{R-tsibble,
   title = {tsibble: Tidy Temporal Data Frames and Tools},
-  author = {Earo Wang and Di Cook and Rob Hyndman and Mitchell O'Hara-Wild},
+  author = {Earo Wang and Di Cook and Rob J Hyndman and Mitchell O'Hara-Wild},
   year = {2019},
   note = {R package version 0.8.3.9000},
   url = {https://tsibble.tidyverts.org},
@@ -959,7 +957,7 @@ Granularities},
     author = {{R Core Team}},
     organization = {R Foundation for Statistical Computing},
     address = {Vienna, Austria},
-    year = {2019},
+    year = {2021},
     url = {https://www.R-project.org/},
   }
 
@@ -1195,7 +1193,7 @@ Granularities},
 
 
 @ARTICLE{Lin1991-fj,
-   title    = "Divergence measures based on the Shannon entropy",
+   title    = "Divergence measures based on the {Shannon} entropy",
    author   = "Lin, J",
    abstract = "A novel class of information-theoretic divergence measures baseda
                on the Shannon entropy is introduced. Unlike the well-known
@@ -1486,14 +1484,10 @@ Granularities},
 
 @BOOK{Faraway2016-uk,
    title     = "Extending the Linear Model with {R} : Generalized Linear, Mixed
-                Effects and Nonparametric Regression Models, Second Edition",
+                Effects and Nonparametric Regression Models",
    author    = "Faraway, Julian J",
-   abstract  = "Start Analyzing a Wide Range of Problems Since the publication
-                of the bestselling, highly recommended first edition, R has
-                considerably",
    publisher = "Chapman and Hall/CRC",
    edition   = "2nd Edition",
-   month     =  mar,
    year      =  2016
  }
  
@@ -1509,7 +1503,7 @@ Granularities},
 
 @Book{rmarkdown2018,
   title = {R Markdown: The Definitive Guide},
-  author = {Yihui Xie and J.J. Allaire and Garrett Grolemund},
+  author = {Yihui Xie and J. J. Allaire and Garrett Grolemund},
   publisher = {Chapman and Hall/CRC},
   address = {Boca Raton, Florida},
   year = {2018},
