--- a/paper/rpkgs.bib
+++ b/paper/rpkgs.bib
@@ -49,7 +49,7 @@
 
 @Manual{R-tsibble,
   title = {tsibble: Tidy Temporal Data Frames and Tools},
-  author = {Earo Wang and Di Cook and Rob Hyndman and Mitchell O'Hara-Wild},
+  author = {Earo Wang and Di Cook and Rob J Hyndman and Mitchell O'Hara-Wild},
   year = {2020},
   note = {R package version 0.9.1},
   url = {https://CRAN.R-project.org/package=tsibble},
@@ -58,7 +58,7 @@
 @Manual{R-gravitas,
   title = {gravitas: Explore Probability Distributions for Bivariate Temporal
 Granularities},
-  author = {Sayani Gupta and Rob Hyndman and Di Cook and Antony Unwin},
+  author = {Sayani Gupta and Rob J Hyndman and Di Cook and Antony Unwin},
   year = {2020},
   note = {R package version 0.1.3},
   url = {https://github.com/Sayani07/gravitas/},
